[package]
name = "slack-lib"
version = "0.1.0"
authors = ["David Buchan-Swanson <david.buchanswanson@gmail.com>"]
edition = "2018"
readme = "README.md"
licence = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
typed-builder = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
impl_for = { path = "./impl_for" }

[dev-dependencies]
assert-json-diff = "1.1.0"
