[package]
name = "impl_for"
version = "0.1.0"
authors = ["David Buchan-Swanson <david.buchanswanson@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0", features = ["full", "extra-traits"] }
quote = "1.0"
